# barbershop

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.claude/: settings.json
.claude/skills/devops/: SKILL.md
.claude/skills/docker/: SKILL.md
.claude/skills/git/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/migrate/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/core/: celery_app.py  config.py  database.py
docs/: RUNNING.md
tests/: test_health.py
